CB-23788: Add new elements to DetailedStackStatus enum to track rolling upgrades
In this commit, I've introduced a few new DetailedStackStatus to enable the EDH tracking of the rolling upgrades. From now we can count how many rolling upgrades failed and how many were successful